# validly

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.env  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-server.yaml
app/: main.py
app/api/api_v1/routers/: column.py  column_mapping.py  dataset.py  datetime.py  dictionary.py  docs.py  documentation.py  general.py  geography.py  metadata.py  note.py  s3_checks.py  session.py  unit.py
app/core/: airline_names.csv  city.csv  config.py  country.csv  diseases.csv  district.csv  docs.py  frequency_of_update.csv  insurance_companies.csv  organization.csv  psu.csv  sector.csv  short_form.csv  state.csv
app/expectations/: custom_expectations.py
app/great_expectation/: custom_expectation.py  expect_table_columns_in_snakecase.py
app/models/: column_mapping.py  date_strftime_pattern.py  enums.py  expect_column_values_to_be_in_set.py  expectation.py  general.py  gsheets.py  metadata_gsheet.py  regex_list_pattern.py  regex_pattern.py  s3_checks.py
app/test/: response_1648555775750.json
app/utils/: airline.py  column.py  column_mapping.py  common.py  dataset.py  datetime.py  general.py  geography.py  gsheets.py  insurance.py  metadata.py  minio_transfer.py  note.py  psu.py  s3_checks.py  tags.py  unit.py
templates/: base.html  dataset-form.html  filename-dropdown.html  index.html  navbar.html  validation-content.html
templates/docs/: docs-base.html  expect-column-values-to-not-have-special-character.html  state.html
