[tool.poetry]
name = "validly"
version = "0.1.0"
description = "Validations on datasets"
authors = ["Somitra"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
great-expectations = "^0.14.0"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"
asyncio = "^3.4.3"
minio = "^7.1.5"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.3"
Werkzeug = "^2.1.1"
boto3 = "^1.23.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^21.9b0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
